test/parser/datatypes-trailing-bar.b3.expect
Error:
5: datatype TrailingBar = Ctor() |
                                  ^
expected a identifier start character

